--- a/react-assignments/src/App.css
+++ b/react-assignments/src/App.css
@@ -5,6 +5,13 @@
   text-align: center;
 }
 
+.navbar{
+  display: flex;
+  flex-wrap: wrap; 
+  gap: 20px;
+  padding: 5px;
+  border-bottom: 1px solid black
+}
 .logo {
   height: 6em;
   padding: 1.5em;
